refactor(layout): 调整管理后台布局结构并优化样式
- 将实体类导入路径从entity调整为domain.entity
- 更新AdminLayout.vue中的Logo显示和菜单图标为SVG格式
- 重构侧边栏样式，统一颜色变量和尺寸规格
- 移除多余的颜色类定义，简化CSS代码结构
- 更新控制台页面的数据展示单位和样式
- 统一全局样式变量，优化页面间距和字体大小
- 添加Toast组件到App.vue中提供消息提示功能